// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can fetch books by shelf 1`] = `
Object {
  "bookShelf": Object {
    "__typename": "BookShelf",
    "items": Object {
      "__typename": "BookPage",
      "items": Array [
        Object {
          "__typename": "Book",
          "title": "The Damned Utd",
        },
      ],
    },
    "name": "Reading",
  },
}
`;

exports[`can fetch second page of books 1`] = `
Object {
  "books": Object {
    "__typename": "BookPage",
    "hasNextPage": true,
    "items": Array [
      Object {
        "__typename": "Book",
        "title": "agurn",
      },
    ],
    "nextPageCursor": "eyJjb3VudFNvRmFyIjoxLCJsYXN0S2V5Ijp7InR5cGU6aWQiOiJCb29rOmM0YzIxMmZhLTdhMWItNDBmYy1iNjQ1LTVlNDU5NDcwOTgxYSIsIm1vdmVkQXQ6dHlwZTppZCI6IjE2Mjc5MzUwMzY2NjM6Qm9vazpjNGMyMTJmYS03YTFiLTQwZmMtYjY0NS01ZTQ1OTQ3MDk4MWEiLCJ0eXBlIjoiQm9vayJ9fQ==",
  },
}
`;

exports[`can fetch second page of books 2`] = `
Object {
  "books": Object {
    "__typename": "BookPage",
    "hasNextPage": true,
    "items": Array [
      Object {
        "__typename": "Book",
        "title": "zprhq",
      },
    ],
    "nextPageCursor": "eyJjb3VudFNvRmFyIjoyLCJsYXN0S2V5Ijp7InR5cGU6aWQiOiJCb29rOmNhZWRjZWEwLTA5ZTItNDI5Yy05ODdlLWY0ZDgwYTE4NjExOCIsIm1vdmVkQXQ6dHlwZTppZCI6IjE2Mjc5MzUwNTIyMTI6Qm9vazpjYWVkY2VhMC0wOWUyLTQyOWMtOTg3ZS1mNGQ4MGExODYxMTgiLCJ0eXBlIjoiQm9vayJ9fQ==",
  },
}
`;

exports[`can import external book 1`] = `
Object {
  "importExternalBook": Object {
    "__typename": "Book",
    "author": "David Peace",
    "id": Any<String>,
    "shelf": Object {
      "__typename": "BookShelf",
      "id": "Reading",
    },
    "title": "The Damned Utd",
  },
}
`;

exports[`can query single book 1`] = `
Object {
  "book": Object {
    "__typename": "Book",
    "author": "David Peace",
    "id": Any<String>,
    "rating": null,
    "shelf": Object {
      "__typename": "BookShelf",
      "id": "Reading",
      "name": "Reading",
    },
    "title": "The Damned Utd",
  },
}
`;

exports[`can search for external books 1`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 2`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 3`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 4`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 5`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 6`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 7`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 8`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 9`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 10`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;
